- detect format of audiomap ahead of time - put this in game version dialog - you can add audio to new message resources (or those without audio maps currently)

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1405,12 +1405,12 @@ BEGIN
     CONTROL         "Check1",IDC_CHECKDELETE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,7,47,172,23
 END
 
-IDD_DIALOGVERSION DIALOGEX 0, 0, 309, 194
+IDD_DIALOGVERSION DIALOGEX 0, 0, 309, 226
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Version detector"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Cancel",IDCANCEL,252,173,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,252,205,50,14
     CONTROL         "SCI 0",IDC_RADIOSCI0,"Button",BS_AUTORADIOBUTTON | WS_GROUP,23,20,33,10
     CONTROL         "SCI 0+",IDC_RADIOSCI0_1,"Button",BS_AUTORADIOBUTTON,23,34,39,10
     CONTROL         "SCI 1.0",IDC_RADIOSCI1,"Button",BS_AUTORADIOBUTTON,23,48,40,10
@@ -1426,24 +1426,28 @@ BEGIN
     CONTROL         "SCI 1.0",IDC_RADIOSCI8,"Button",BS_AUTORADIOBUTTON,23,110,40,10
     CONTROL         "SCI 1.1",IDC_RADIOSCI9,"Button",BS_AUTORADIOBUTTON,23,124,40,10
     GROUPBOX        "Resource package fmt",IDC_STATIC6,7,83,87,57,WS_GROUP
-    CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,135,53,8
-    CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,108,69,10
-    CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,121,49,10
-    DEFPUSHBUTTON   "Reload game",IDOK,167,173,81,14
+    CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,166,53,8
+    CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,139,69,10
+    CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,152,49,10
+    DEFPUSHBUTTON   "Reload game",IDOK,167,205,81,14
     COMBOBOX        IDC_COMBO1,206,57,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "View format",IDC_STATIC4,161,60,39,8
     COMBOBOX        IDC_COMBO2,206,75,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Pic format",IDC_STATIC5,166,77,33,8
-    PUSHBUTTON      "View resource map",IDC_BUTTON1,7,173,87,14
-    CONTROL         "Separate heap resource",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,147,93,10
-    CONTROL         "Parser vocab 900",IDC_CHECK7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,147,91,10
+    PUSHBUTTON      "View resource map",IDC_BUTTON1,7,205,87,14
+    CONTROL         "Separate heap resource",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,178,93,10
+    CONTROL         "Parser vocab 900",IDC_CHECK7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,178,91,10
     PUSHBUTTON      "View message map",IDC_BUTTON2,7,156,87,14
-    CONTROL         "Early SCI0 script res",IDC_CHECK8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,134,81,10
-    CONTROL         "SCI 1.1 palettes",IDC_CHECK9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,160,68,10
-    CONTROL         "Separate msg map",IDC_CHECK10,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,122,75,10
-    CONTROL         "Supports messages",IDC_CHECK11,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,109,78,10
+    CONTROL         "Early SCI0 script res",IDC_CHECK8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,165,81,10
+    CONTROL         "SCI 1.1 palettes",IDC_CHECK9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,191,68,10
+    CONTROL         "Separate msg map",IDC_CHECK10,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,153,75,10
+    CONTROL         "Supports messages",IDC_CHECK11,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,140,78,10
     COMBOBOX        IDC_COMBO3,206,91,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Audio volume name",IDC_STATIC7,136,93,63,8
+    COMBOBOX        IDC_COMBO4,206,107,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO5,206,123,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Audio map format",IDC_STATIC10,141,109,58,8
+    RTEXT           "Audio36 map format",IDC_STATIC11,134,125,66,8
 END
 
 IDD_DIALOGCHOOSECOLORVGA DIALOGEX 0, 0, 152, 152
@@ -2337,7 +2341,7 @@ BEGIN
         VERTGUIDE, 110
         VERTGUIDE, 206
         TOPMARGIN, 7
-        BOTTOMMARGIN, 187
+        BOTTOMMARGIN, 219
     END
 
     IDD_DIALOGCHOOSECOLORVGA, DIALOG
@@ -2613,6 +2617,30 @@ BEGIN
 0x732e, 0x7866, "\000" 
     IDC_COMBO3, 0x403, 8, 0
 0x7561, 0x2f64, 0x6673, 0x0078, 
+    IDC_COMBO4, 0x403, 5, 0
+0x6f4e, 0x656e, "\000" 
+    IDC_COMBO4, 0x403, 8, 0
+0x2035, 0x7962, 0x6574, 0x0073, 
+    IDC_COMBO4, 0x403, 8, 0
+0x2036, 0x7962, 0x6574, 0x0073, 
+    IDC_COMBO4, 0x403, 8, 0
+0x2038, 0x7962, 0x6574, 0x0073, 
+    IDC_COMBO4, 0x403, 15, 0
+0x7953, 0x636e, 0x6d20, 0x7061, 0x6520, 0x7261, 0x796c, "\000" 
+    IDC_COMBO4, 0x403, 14, 0
+0x7953, 0x636e, 0x6d20, 0x7061, 0x6c20, 0x7461, 0x0065, 
+    IDC_COMBO5, 0x403, 5, 0
+0x6f4e, 0x656e, "\000" 
+    IDC_COMBO5, 0x403, 8, 0
+0x2035, 0x7962, 0x6574, 0x0073, 
+    IDC_COMBO5, 0x403, 8, 0
+0x2036, 0x7962, 0x6574, 0x0073, 
+    IDC_COMBO5, 0x403, 8, 0
+0x2038, 0x7962, 0x6574, 0x0073, 
+    IDC_COMBO5, 0x403, 15, 0
+0x7953, 0x636e, 0x6d20, 0x7061, 0x6520, 0x7261, 0x796c, "\000" 
+    IDC_COMBO5, 0x403, 14, 0
+0x7953, 0x636e, 0x6d20, 0x7061, 0x6c20, 0x7461, 0x0065, 
     0
 END
 
