- support for import/export of lipsync data

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1850,14 +1850,16 @@ BEGIN
     LTEXT           "Duration:",IDC_STATIC_DURATION,16,138,75,8
     PUSHBUTTON      "Raw",IDC_BUTTON_RAW,108,131,20,14,BS_ICON
     LTEXT           "Current lip-sync resource:",IDC_STATIC_SYNC36,137,134,53,8
-    PUSHBUTTON      "Delete",IDC_BUTTON_DELETE_SYNC,192,131,18,14,BS_ICON
+    PUSHBUTTON      "Import",IDC_BUTTON_IMPORTSYNC,136,240,18,14,BS_ICON
+    PUSHBUTTON      "Export",IDC_BUTTON_EXPORTSYNC,155,240,18,14,BS_ICON
+    PUSHBUTTON      "Delete",IDC_BUTTON_DELETE_SYNC,193,240,18,14,BS_ICON
     EDITTEXT        IDC_EDIT_SAMPLEBIT,15,152,111,14,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "Generate Lip-sync Data",ID_GENERATELIPSYNC,15,170,53,23,BS_MULTILINE
     CONTROL         "Use Text",IDC_CHECK_USETEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,73,178,52,10
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,16,197,112,14
     LTEXT           "Word guesses:",IDC_STATIC_WORDS,19,215,49,8
     EDITTEXT        IDC_EDIT_WORDS,15,227,115,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
-    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,136,149,75,100
+    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,136,149,75,90
     GROUPBOX        "Message: N V C S",IDC_GROUP_MESSAGE,7,123,209,133
     PUSHBUTTON      "8",IDC_BUTTON_PLAY2,155,57,19,14
     PUSHBUTTON      "g",IDC_BUTTON_STOP,182,57,19,14
