- fix 16bit level meter. - fix noise gate for 16bit

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -344,10 +344,12 @@
     <ClInclude Include="Src\Resources\ResourceMapEvents.h" />
     <ClInclude Include="Src\Resources\Sync.h" />
     <ClInclude Include="Src\Resources\View.h" />
+    <ClInclude Include="Src\Util\AudioProcessing.h" />
     <ClInclude Include="Src\Util\AudioRecording.h" />
     <ClInclude Include="Src\Util\BufferPool.h">
       <FileType>CppCode</FileType>
     </ClInclude>
+    <ClCompile Include="Src\Util\AudioProcessing.cpp" />
     <ClCompile Include="Src\Util\AudioRecording.cpp" />
     <ClCompile Include="Src\Util\CodecAlt.cpp" />
     <ClCompile Include="Src\Resources\Sound.cpp" />
