- support for audio negatives (yikes)

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1886,21 +1886,33 @@ BEGIN
     LTEXT           "Choose a view and loop for this talker's mouth.",IDC_STATIC3,7,7,117,19
 END
 
-IDD_AUDIOPREFERENCES DIALOGEX 0, 0, 193, 145
+IDD_AUDIOPREFERENCES DIALOGEX 0, 0, 207, 185
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Audio Preferences"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Ok",IDOK,80,124,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,136,124,50,14
-    COMBOBOX        IDC_COMBO_MIDIDEVICE,61,62,125,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Midi device:",IDC_STATIC1,7,64,45,8,0,WS_EX_RIGHT
-    LTEXT           "Start/end recording trim (ms):",IDC_STATIC2,24,21,102,8
-    EDITTEXT        IDC_EDIT_TRIMLEFT,21,34,40,14,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_EDIT_TRIMRIGHT,77,33,40,14,ES_AUTOHSCROLL | ES_NUMBER
-    GROUPBOX        "Recording",IDC_GROUP2,7,7,119,50
-    PUSHBUTTON      "Force repackage audio",IDC_BUTTON_REPACKAGE,97,82,89,14
-    PUSHBUTTON      "Clear audio file cache",IDC_BUTTON_CLEARAUDIOCACHE,97,100,89,14
+    DEFPUSHBUTTON   "Ok",IDOK,95,164,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,150,164,50,14
+    LTEXT           "Start/end trim (ms):",IDC_STATIC_TRIM,18,21,102,8
+    EDITTEXT        IDC_EDIT_TRIMLEFT,17,34,36,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_TRIMRIGHT,61,33,34,14,ES_AUTOHSCROLL | ES_NUMBER
+    RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,58,40,8
+    EDITTEXT        IDC_EDIT_OPENTHR,61,55,29,14,ES_AUTOHSCROLL
+    RTEXT           "Close T (dB)",IDC_STATIC_CLOSETHR,15,74,40,8
+    EDITTEXT        IDC_EDIT_CLOSETHR,61,71,30,14,ES_AUTOHSCROLL
+    CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,131,19,47,10
+    CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,131,36,66,10
+    RTEXT           "Attack (ms)",IDC_STATIC_ATTACK,113,56,38,8
+    EDITTEXT        IDC_EDIT_ATTACK,153,53,40,14,ES_AUTOHSCROLL
+    RTEXT           "Release (ms)",IDC_STATIC_RELEASE,109,73,42,8
+    EDITTEXT        IDC_EDIT_RELEASE,153,70,40,14,ES_AUTOHSCROLL
+    RTEXT           "Hold (ms)",IDC_STATIC_HOLD,119,89,31,8
+    EDITTEXT        IDC_EDIT_HOLD,153,87,40,14,ES_AUTOHSCROLL
+    LTEXT           "Midi device:",IDC_STATIC1,7,110,45,8,0,WS_EX_RIGHT
+    COMBOBOX        IDC_COMBO_MIDIDEVICE,61,108,139,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Force repackage audio",IDC_BUTTON_REPACKAGE,95,125,105,14
+    PUSHBUTTON      "Clear audio file cache",IDC_BUTTON_CLEARAUDIOCACHE,95,143,105,14
+    GROUPBOX        "Recording",IDC_GROUP2,7,7,193,98
 END
 
 
@@ -2560,11 +2572,12 @@ BEGIN
     IDD_AUDIOPREFERENCES, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 186
+        RIGHTMARGIN, 200
         VERTGUIDE, 61
-        VERTGUIDE, 97
+        VERTGUIDE, 95
+        VERTGUIDE, 179
         TOPMARGIN, 7
-        BOTTOMMARGIN, 138
+        BOTTOMMARGIN, 178
     END
 END
 #endif    // APSTUDIO_INVOKED
