- basic support for audio editing.

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1841,7 +1841,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "Accept",IDOK,239,242,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,300,242,50,14
-    CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,7,7,343,47
+    CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,7,7,322,47
     PUSHBUTTON      "Set &View",IDC_BUTTON_SETVIEW,19,90,59,14
     CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,90,64,56,50
     RTEXT           "Talker mouth view:",IDC_STATIC_TALKER,13,68,65,20
@@ -1870,6 +1870,7 @@ BEGIN
     PUSHBUTTON      "&Reset",IDC_BUTTON_RESETMAPPING,301,180,41,14
     EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,228,196,115,36,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
     GROUPBOX        "View/Loop 0/0",IDC_GROUP_VIEWLOOP,221,59,129,177
+    PUSHBUTTON      "Edit",IDC_EDITAUDIO,331,7,19,14,BS_ICON | BS_FLAT
 END
 
 IDD_VIEWLOOP DIALOGEX 0, 0, 131, 93
@@ -1913,6 +1914,38 @@ BEGIN
     PUSHBUTTON      "Force repackage audio",IDC_BUTTON_REPACKAGE,95,125,105,14
     PUSHBUTTON      "Clear audio file cache",IDC_BUTTON_CLEARAUDIOCACHE,95,143,105,14
     GROUPBOX        "Recording",IDC_GROUP2,7,7,193,98
+END
+
+IDD_AUDIOEDIT DIALOGEX 0, 0, 243, 215
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Edit Audio"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "Accept",IDOK,129,194,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,186,194,50,14
+    LTEXT           "Start/end trim (ms):",IDC_STATIC_TRIM,18,21,102,8
+    EDITTEXT        IDC_EDIT_TRIMLEFT,17,34,36,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_TRIMRIGHT,61,33,33,14,ES_AUTOHSCROLL | ES_NUMBER
+    RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,58,40,8
+    EDITTEXT        IDC_EDIT_OPENTHR,61,55,29,14,ES_AUTOHSCROLL
+    RTEXT           "Close T (dB)",IDC_STATIC_CLOSETHR,15,74,40,8
+    EDITTEXT        IDC_EDIT_CLOSETHR,61,71,30,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Re-process",IDC_BUTTON_PROCESS,14,89,50,14
+    CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,17,47,10
+    CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,34,66,10
+    RTEXT           "Attack (ms)",IDC_STATIC_ATTACK,146,54,38,8
+    EDITTEXT        IDC_EDIT_ATTACK,186,51,40,14,ES_AUTOHSCROLL
+    RTEXT           "Release (ms)",IDC_STATIC_RELEASE,142,71,42,8
+    EDITTEXT        IDC_EDIT_RELEASE,186,68,40,14,ES_AUTOHSCROLL
+    RTEXT           "Hold (ms)",IDC_STATIC_HOLD,152,87,31,8
+    EDITTEXT        IDC_EDIT_HOLD,186,85,40,14,ES_AUTOHSCROLL
+    GROUPBOX        "Audio processing",IDC_GROUP2,7,7,229,98
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,7,194,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,34,194,19,14
+    CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,7,108,229,29
+    CONTROL         "",IDC_WAVEFORM2,"Static",SS_OWNERDRAW,7,145,229,29
+    RTEXT           "Duration:",IDC_STATIC_DURATION,47,178,75,8
+    EDITTEXT        IDC_EDIT_SAMPLEBIT,125,176,111,14,ES_AUTOHSCROLL | ES_READONLY
 END
 
 
@@ -2578,6 +2611,17 @@ BEGIN
         VERTGUIDE, 179
         TOPMARGIN, 7
         BOTTOMMARGIN, 178
+    END
+
+    IDD_AUDIOEDIT, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 236
+        VERTGUIDE, 61
+        VERTGUIDE, 94
+        VERTGUIDE, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 208
     END
 END
 #endif    // APSTUDIO_INVOKED
