--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1887,50 +1887,52 @@ BEGIN
     LTEXT           "Choose a view and loop for this talker's mouth.",IDC_STATIC3,7,7,117,19
 END
 
-IDD_AUDIOPREFERENCES DIALOGEX 0, 0, 207, 185
+IDD_AUDIOPREFERENCES DIALOGEX 0, 0, 207, 198
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Audio Preferences"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Ok",IDOK,95,164,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,150,164,50,14
+    DEFPUSHBUTTON   "Ok",IDOK,95,177,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,150,177,50,14
     LTEXT           "Start/end trim (ms):",IDC_STATIC_TRIM,18,21,102,8
-    EDITTEXT        IDC_EDIT_TRIMLEFT,17,34,36,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_TRIMLEFT,17,33,36,14,ES_AUTOHSCROLL | ES_NUMBER
     EDITTEXT        IDC_EDIT_TRIMRIGHT,61,33,34,14,ES_AUTOHSCROLL | ES_NUMBER
-    RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,58,40,8
-    EDITTEXT        IDC_EDIT_OPENTHR,61,55,29,14,ES_AUTOHSCROLL
-    RTEXT           "Close T (dB)",IDC_STATIC_CLOSETHR,15,74,40,8
-    EDITTEXT        IDC_EDIT_CLOSETHR,61,71,30,14,ES_AUTOHSCROLL
+    RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,74,40,8
+    EDITTEXT        IDC_EDIT_OPENTHR,61,71,29,14,ES_AUTOHSCROLL
+    RTEXT           "Close T (dB)",IDC_STATIC_CLOSETHR,15,90,40,8
+    EDITTEXT        IDC_EDIT_CLOSETHR,61,87,30,14,ES_AUTOHSCROLL
     CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,131,19,47,10
     CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,131,36,66,10
-    RTEXT           "Attack (ms)",IDC_STATIC_ATTACK,113,56,38,8
-    EDITTEXT        IDC_EDIT_ATTACK,153,53,40,14,ES_AUTOHSCROLL
-    RTEXT           "Release (ms)",IDC_STATIC_RELEASE,109,73,42,8
-    EDITTEXT        IDC_EDIT_RELEASE,153,70,40,14,ES_AUTOHSCROLL
-    RTEXT           "Hold (ms)",IDC_STATIC_HOLD,119,89,31,8
-    EDITTEXT        IDC_EDIT_HOLD,153,87,40,14,ES_AUTOHSCROLL
-    LTEXT           "Midi device:",IDC_STATIC1,7,110,45,8,0,WS_EX_RIGHT
-    COMBOBOX        IDC_COMBO_MIDIDEVICE,61,108,139,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Force repackage audio",IDC_BUTTON_REPACKAGE,95,125,105,14
-    PUSHBUTTON      "Clear audio file cache",IDC_BUTTON_CLEARAUDIOCACHE,95,143,105,14
-    GROUPBOX        "Recording",IDC_GROUP2,7,7,193,98
+    RTEXT           "Attack (ms)",IDC_STATIC_ATTACK,113,72,38,8
+    EDITTEXT        IDC_EDIT_ATTACK,153,69,40,14,ES_AUTOHSCROLL
+    RTEXT           "Release (ms)",IDC_STATIC_RELEASE,109,89,42,8
+    EDITTEXT        IDC_EDIT_RELEASE,153,86,40,14,ES_AUTOHSCROLL
+    RTEXT           "Hold (ms)",IDC_STATIC_HOLD,119,105,31,8
+    EDITTEXT        IDC_EDIT_HOLD,153,103,40,14,ES_AUTOHSCROLL
+    LTEXT           "Midi device:",IDC_STATIC1,7,127,45,8,0,WS_EX_RIGHT
+    COMBOBOX        IDC_COMBO_MIDIDEVICE,61,125,139,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Force repackage audio",IDC_BUTTON_REPACKAGE,95,142,105,14
+    PUSHBUTTON      "Clear audio file cache",IDC_BUTTON_CLEARAUDIOCACHE,95,160,105,14
+    GROUPBOX        "Recording",IDC_GROUP2,7,7,193,113
+    RTEXT           "Noise Gate Preset:",IDC_STATIC_PRESET,15,54,72,8
+    COMBOBOX        IDC_COMBO_PRESET2,95,52,97,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_AUDIOEDIT DIALOGEX 0, 0, 243, 215
+IDD_AUDIOEDIT DIALOGEX 0, 0, 265, 226
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Edit Audio"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Accept",IDOK,129,194,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,186,194,50,14
+    DEFPUSHBUTTON   "Accept",IDOK,149,205,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,208,205,50,14
     LTEXT           "Start/end trim (ms):",IDC_STATIC_TRIM,18,21,102,8
     EDITTEXT        IDC_EDIT_TRIMLEFT,17,34,36,14,ES_AUTOHSCROLL | ES_NUMBER
     EDITTEXT        IDC_EDIT_TRIMRIGHT,61,33,33,14,ES_AUTOHSCROLL | ES_NUMBER
-    RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,58,40,8
-    EDITTEXT        IDC_EDIT_OPENTHR,61,55,29,14,ES_AUTOHSCROLL
-    RTEXT           "Close T (dB)",IDC_STATIC_CLOSETHR,15,74,40,8
-    EDITTEXT        IDC_EDIT_CLOSETHR,61,71,30,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "Re-process",IDC_BUTTON_PROCESS,14,89,50,14
+    RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,74,40,8
+    EDITTEXT        IDC_EDIT_OPENTHR,61,71,29,14,ES_AUTOHSCROLL
+    RTEXT           "Close T (dB)",IDC_STATIC_CLOSETHR,15,90,40,8
+    EDITTEXT        IDC_EDIT_CLOSETHR,61,87,30,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Re-process",IDC_BUTTON_PROCESS,34,140,18,14,BS_ICON
     CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,17,47,10
     CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,34,66,10
     RTEXT           "Attack (ms)",IDC_STATIC_ATTACK,146,54,38,8
@@ -1939,13 +1941,18 @@ BEGIN
     EDITTEXT        IDC_EDIT_RELEASE,186,68,40,14,ES_AUTOHSCROLL
     RTEXT           "Hold (ms)",IDC_STATIC_HOLD,152,87,31,8
     EDITTEXT        IDC_EDIT_HOLD,186,85,40,14,ES_AUTOHSCROLL
-    GROUPBOX        "Audio processing",IDC_GROUP2,7,7,229,98
-    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,7,194,19,14
-    PUSHBUTTON      "g",IDC_BUTTON_STOP,34,194,19,14
-    CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,7,108,229,29
-    CONTROL         "",IDC_WAVEFORM2,"Static",SS_OWNERDRAW,7,145,229,29
-    RTEXT           "Duration:",IDC_STATIC_DURATION,47,178,75,8
-    EDITTEXT        IDC_EDIT_SAMPLEBIT,125,176,111,14,ES_AUTOHSCROLL | ES_READONLY
+    GROUPBOX        "Audio processing",IDC_GROUP2,7,7,251,98
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,7,205,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,34,205,19,14
+    CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,26,108,232,29
+    CONTROL         "",IDC_WAVEFORM2,"Static",SS_OWNERDRAW,25,156,233,29
+    RTEXT           "Duration:",IDC_STATIC_DURATION,12,191,52,8
+    EDITTEXT        IDC_EDIT_SAMPLEBIT,71,188,187,14,ES_AUTOHSCROLL | ES_READONLY
+    COMBOBOX        IDC_COMBO_BIT,72,207,62,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_RADIO_NEGATIVE,"Button",BS_AUTORADIOBUTTON | BS_LEFTTEXT,7,118,16,10
+    CONTROL         "",IDC_RADIO_FINAL,"Button",BS_AUTORADIOBUTTON | BS_LEFTTEXT,7,167,16,10
+    RTEXT           "N. G. Preset:",IDC_STATIC_PRESET,12,56,46,8
+    COMBOBOX        IDC_COMBO_PRESET2,61,53,56,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 
@@ -2610,18 +2617,18 @@ BEGIN
         VERTGUIDE, 95
         VERTGUIDE, 179
         TOPMARGIN, 7
-        BOTTOMMARGIN, 178
+        BOTTOMMARGIN, 191
     END
 
     IDD_AUDIOEDIT, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 236
+        RIGHTMARGIN, 258
         VERTGUIDE, 61
         VERTGUIDE, 94
-        VERTGUIDE, 179
+        VERTGUIDE, 199
         TOPMARGIN, 7
-        BOTTOMMARGIN, 208
+        BOTTOMMARGIN, 219
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -2770,6 +2777,15 @@ BEGIN
 0x3232, 0x3530, 0x4830, 0x2c7a, 0x3820, 0x6220, 0x7469, "\000" 
     IDC_COMBO_WAVEFORMAT, 0x403, 16, 0
 0x3232, 0x3530, 0x4830, 0x2c7a, 0x3120, 0x2036, 0x6962, 0x0074, 
+    0
+END
+
+IDD_AUDIOEDIT DLGINIT
+BEGIN
+    IDC_COMBO_BIT, 0x403, 6, 0
+0x2038, 0x6962, 0x0074, 
+    IDC_COMBO_BIT, 0x403, 7, 0
+0x3631, 0x6220, 0x7469, "\000" 
     0
 END
 
