- add audio edit button in message pane

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1698,6 +1698,7 @@ BEGIN
     PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,90,44,14
     CONTROL         "Use Text",IDC_CHECK_USETEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,321,41,55,10
     PUSHBUTTON      "Delete",IDC_BUTTONDELETEAUDIO,474,90,18,14,BS_ICON
+    PUSHBUTTON      "Edit",IDC_EDITAUDIO,383,24,19,14,BS_ICON | BS_FLAT
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
