--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1872,6 +1872,7 @@ BEGIN
     EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,228,196,115,36,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
     GROUPBOX        "View/Loop 0/0",IDC_GROUP_VIEWLOOP,221,59,129,177
     PUSHBUTTON      "Edit",IDC_EDITAUDIO,331,7,19,14,BS_ICON | BS_FLAT
+    PUSHBUTTON      "Edit",IDC_EDITPHONEMEMAP,323,68,19,14,BS_ICON | BS_FLAT
 END
 
 IDD_VIEWLOOP DIALOGEX 0, 0, 131, 93
@@ -1954,6 +1955,20 @@ BEGIN
     CONTROL         "",IDC_RADIO_FINAL,"Button",BS_AUTORADIOBUTTON | BS_LEFTTEXT,7,167,16,10
     RTEXT           "N. G. Preset:",IDC_STATIC_PRESET,12,56,46,8
     COMBOBOX        IDC_COMBO_PRESET2,61,53,56,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+END
+
+IDD_PHONEMEEDITOR DIALOGEX 0, 0, 315, 242
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Phoneme Map"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,198,221,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,258,221,50,14
+    CONTROL         "",IDC_PHONEME,"Static",SS_OWNERDRAW | SS_NOTIFY,7,7,301,174
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,7,185,56,50
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,71,221,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,98,221,19,14
+    EDITTEXT        IDC_EDIT_SAMPLE,73,187,235,28,ES_MULTILINE | ES_READONLY
 END
 
 
@@ -2630,6 +2645,14 @@ BEGIN
         VERTGUIDE, 199
         TOPMARGIN, 7
         BOTTOMMARGIN, 219
+    END
+
+    IDD_PHONEMEEDITOR, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 308
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 235
     END
 END
 #endif    // APSTUDIO_INVOKED
