- finish up changes to lipsync dialog after creating phoneme editor

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1843,36 +1843,37 @@ BEGIN
     DEFPUSHBUTTON   "Accept",IDOK,239,242,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,300,242,50,14
     CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,7,7,322,47
-    PUSHBUTTON      "Set &View",IDC_BUTTON_SETVIEW,19,90,59,14
-    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,90,64,56,50
     RTEXT           "Talker mouth view:",IDC_STATIC_TALKER,13,68,65,20
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,90,64,56,50
+    PUSHBUTTON      "Set &View",IDC_BUTTON_SETVIEW,19,90,59,14
     CONTROL         "Use &Sample",IDC_CHECK_USESAMPLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,23,107,52,10
     GROUPBOX        "Static",IDC_GROUP_TALKER,7,55,145,65
     LTEXT           "Duration:",IDC_STATIC_DURATION,16,138,75,8
     PUSHBUTTON      "Raw",IDC_BUTTON_RAW,108,131,20,14,BS_ICON
-    LTEXT           "Current lip-sync resource:",IDC_STATIC_SYNC36,137,134,53,8
-    PUSHBUTTON      "Import",IDC_BUTTON_IMPORTSYNC,136,240,18,14,BS_ICON
-    PUSHBUTTON      "Export",IDC_BUTTON_EXPORTSYNC,155,240,18,14,BS_ICON
-    PUSHBUTTON      "Delete",IDC_BUTTON_DELETE_SYNC,193,240,18,14,BS_ICON
     EDITTEXT        IDC_EDIT_SAMPLEBIT,15,152,111,14,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "Generate Lip-sync Data",ID_GENERATELIPSYNC,15,170,53,23,BS_MULTILINE
     CONTROL         "Use Text",IDC_CHECK_USETEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,73,178,52,10
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,16,197,112,14
     LTEXT           "Word guesses:",IDC_STATIC_WORDS,19,215,49,8
     EDITTEXT        IDC_EDIT_WORDS,15,227,115,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
+    LTEXT           "Current lip-sync resource:",IDC_STATIC_SYNC36,137,134,53,8
     CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,136,149,75,90
-    GROUPBOX        "Message: N V C S",IDC_GROUP_MESSAGE,7,123,209,133
+    PUSHBUTTON      "Import",IDC_BUTTON_IMPORTSYNC,136,240,18,14,BS_ICON
+    PUSHBUTTON      "Export",IDC_BUTTON_EXPORTSYNC,155,240,18,14,BS_ICON
+    PUSHBUTTON      "Delete",IDC_BUTTON_DELETE_SYNC,193,240,18,14,BS_ICON
     PUSHBUTTON      "8",IDC_BUTTON_PLAY2,155,57,19,14
     PUSHBUTTON      "g",IDC_BUTTON_STOP,182,57,19,14
     CONTROL         "&Half speed",IDC_CHECK_HALFSPEED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,156,83,52,10
-    LTEXT           "Phoneme to cel mapping:",IDC_STATIC_PHONEME,231,71,96,8
-    EDITTEXT        IDC_EDIT_PHONEMEMAP,228,84,115,94,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | WS_VSCROLL
-    PUSHBUTTON      "Commit &Phonemes",IDC_BUTTON_COMMITMAPPING,228,180,69,14
-    PUSHBUTTON      "&Reset",IDC_BUTTON_RESETMAPPING,301,180,41,14
-    EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,228,196,115,36,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
+    LTEXT           "Phoneme to cel mapping:",IDC_STATIC_PHONEME,231,71,81,8
+    PUSHBUTTON      "Edit",IDC_EDITPHONEMEMAP,313,68,29,14,BS_FLAT
+    EDITTEXT        IDC_EDIT_PHONEMEMAP,228,84,115,94,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
+    PUSHBUTTON      "Reload",IDC_BUTTON_RELOADMAPPING,228,180,33,14
+    PUSHBUTTON      "&Reset",IDC_BUTTON_RESETMAPPING,269,180,32,14
+    PUSHBUTTON      "Open",IDC_BUTTON_OPENMAPPING,310,180,33,14
     GROUPBOX        "View/Loop 0/0",IDC_GROUP_VIEWLOOP,221,59,129,177
+    GROUPBOX        "Message: N V C S",IDC_GROUP_MESSAGE,7,123,209,133
+    EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,228,196,115,36,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
     PUSHBUTTON      "Edit",IDC_EDITAUDIO,331,7,19,14,BS_ICON | BS_FLAT
-    PUSHBUTTON      "Edit",IDC_EDITPHONEMEMAP,323,68,19,14,BS_ICON | BS_FLAT
 END
 
 IDD_VIEWLOOP DIALOGEX 0, 0, 131, 93
