- fix crash - better help in phoneme dialog

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1956,21 +1956,22 @@ BEGIN
     CONTROL         "",IDC_RADIO_NEGATIVE,"Button",BS_AUTORADIOBUTTON | BS_LEFTTEXT,7,118,16,10
     CONTROL         "",IDC_RADIO_FINAL,"Button",BS_AUTORADIOBUTTON | BS_LEFTTEXT,7,167,16,10
     RTEXT           "N. G. Preset:",IDC_STATIC_PRESET,12,56,46,8
-    COMBOBOX        IDC_COMBO_PRESET2,61,53,56,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_PRESET2,61,53,81,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_PHONEMEEDITOR DIALOGEX 0, 0, 315, 242
+IDD_PHONEMEEDITOR DIALOGEX 0, 0, 315, 266
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Phoneme Map"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,198,221,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,258,221,50,14
-    CONTROL         "",IDC_PHONEME,"Static",SS_OWNERDRAW | SS_NOTIFY,7,7,301,174
-    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,7,185,56,50
-    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,71,221,19,14
-    PUSHBUTTON      "g",IDC_BUTTON_STOP,98,221,19,14
-    EDITTEXT        IDC_EDIT_SAMPLE,73,187,235,28,ES_MULTILINE | ES_READONLY
+    DEFPUSHBUTTON   "OK",IDOK,198,249,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,258,249,50,14
+    CONTROL         "",IDC_PHONEME,"Static",SS_OWNERDRAW | SS_NOTIFY,7,35,301,174
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,7,213,56,50
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,71,249,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,98,249,19,14
+    EDITTEXT        IDC_EDIT_SAMPLE,73,215,235,28,ES_MULTILINE | ES_READONLY
+    EDITTEXT        IDC_EDIT_DESCRIPTION2,7,7,301,26,ES_MULTILINE | ES_READONLY
 END
 
 
@@ -2654,7 +2655,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 308
         TOPMARGIN, 7
-        BOTTOMMARGIN, 235
+        BOTTOMMARGIN, 259
     END
 END
 #endif    // APSTUDIO_INVOKED
