--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1190,14 +1190,14 @@ BEGIN
     LTEXT           "x",IDC_STATIC5,59,72,8,8,0,WS_EX_RIGHT
     EDITTEXT        IDC_EDIT_CELHEIGHT,67,65,22,14,ES_AUTOHSCROLL | ES_NUMBER
     GROUPBOX        "Cel",IDC_STATIC_CELGROUP,3,56,96,28
-    LTEXT           "Line height:",IDC_STATIC3,22,90,38,8
+    RTEXT           "Line height:",IDC_STATIC3,22,90,38,8
     EDITTEXT        IDC_EDIT_LINEHEIGHT,65,87,29,14,ES_AUTOHSCROLL
     LTEXT           "Preview text:",IDC_STATIC4,3,125,44,8
     EDITTEXT        IDC_EDIT_SAMPLE,3,135,96,43,ES_MULTILINE | ES_WANTRETURN
     CONTROL         "Affect all characters",IDC_CHECKAPPLYTOALL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,183,96,10
     PUSHBUTTON      "Use Windows font",ID_MAKEFONT,3,198,96,14
     EDITTEXT        IDC_EDITNUMCHARS,65,106,29,14,ES_AUTOHSCROLL | ES_NUMBER
-    RTEXT           "Char count:",IDC_STATIC8,18,108,39,8
+    RTEXT           "Char count:",IDC_STATIC8,20,108,39,8
     CONTROL         "Pen",IDC_BUTTONPENSTYLE,"Button",BS_OWNERDRAW | BS_BITMAP | WS_TABSTOP,71,27,23,19
 END
 
@@ -1251,7 +1251,7 @@ BEGIN
     LTEXT           "Palette:",IDC_STATIC9,6,126,30,10
     COMBOBOX        IDC_COMBO_PALETTE,39,123,37,200,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Is scalable",IDC_CHECKISSCALABLE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,3,145,45,11
-    PUSHBUTTON      "Edit",ID_VIEW_EDITPALETTE,80,122,19,14,BS_ICON | BS_FLAT
+    PUSHBUTTON      "Edit",ID_VIEW_EDITPALETTE,80,122,19,16,BS_ICON | BS_FLAT
     CONTROL         "Pen",IDC_BUTTONPENSTYLE,"Button",BS_OWNERDRAW | BS_BITMAP | WS_TABSTOP,76,102,23,19
 END
 
@@ -1276,7 +1276,7 @@ BEGIN
     CONTROL         "",IDC_STATIC2,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,178,103,87
     PUSHBUTTON      "Copy",ID_EDIT_COPY,7,42,32,14
     PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_RIGHT
-    PUSHBUTTON      "Edit",ID_PIC_EDITPALETTE,7,162,19,14,BS_ICON | BS_FLAT
+    PUSHBUTTON      "Edit",ID_PIC_EDITPALETTE,7,162,19,16,BS_ICON | BS_FLAT
     PUSHBUTTON      "Set background",ID_EDIT_IMPORTPICBACKGROUND,44,25,66,14
 END
 
@@ -1726,7 +1726,7 @@ BEGIN
     CONTROL         "",IDC_STATIC2,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,183,103,87
     PUSHBUTTON      "Copy",ID_EDIT_COPY,7,56,32,14
     PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_RIGHT
-    PUSHBUTTON      "Edit",ID_PIC_EDITPALETTE,7,162,19,14,BS_ICON | BS_FLAT
+    PUSHBUTTON      "Edit",ID_PIC_EDITPALETTE,7,162,19,17,BS_ICON | BS_FLAT
     PUSHBUTTON      "Set background",ID_EDIT_IMPORTPICBACKGROUND,44,25,66,14
     LISTBOX         IDC_LISTPOLYGONS,7,105,103,31,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBOPOLYTYPE,44,90,66,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
@@ -1763,7 +1763,7 @@ BEGIN
     PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,7,162,69,14
     LTEXT           "Audio resources are short wav-based resources used for sound effects.",IDC_STATICTITLE,7,7,139,22
     PUSHBUTTON      "Record",IDC_BUTTON_RECORD,95,180,19,14,BS_ICON
-    COMBOBOX        IDC_COMBO_WAVEFORMAT,29,181,61,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_WAVEFORMAT,7,181,83,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,79,162,35,14
 END
 
@@ -3147,11 +3147,17 @@ STRINGTABLE
 BEGIN
     IDC_BUTTON_SETVIEW      "Set the view/loop for this talker"
     IDC_CHECK_USESAMPLE     "Use a sample view just to check lip-sync accuracy"
+    IDC_CHECK_MONITOR       "Monitor microphone levels for recording"
 END
 
 STRINGTABLE
 BEGIN
     IDC_CHECK_USETEXT       "Use text (in addition to audio) when generating lip sync data"
+END
+
+STRINGTABLE
+BEGIN
+    IDC_COMBO_WAVEFORMAT    "Recording format"
 END
 
 #endif    // English (United States) resources
